@@ -2,6 +2,9 @@
 
     - Fixed implementation of GH-77.
 
+    - Added $pdf->standard_fonts() and $pdf->is_standard_font($name) (initial
+      patch by Johan Vromans).
+
 
 2.046     2024-05-14
 
